--- a/inject.css
+++ b/inject.css
@@ -1,13 +1,22 @@
 h1{
 	font-size: 30px !important;	
-	text-shadow: 2px 2px 0px #000 !important;
+	text-shadow: 0px 0px 10px black !important;
 	color: white !important;
 	margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%)}
+    transform: translate(-50%, -50%)
+}
+h2{
+	margin: 0;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
 body{
-	background-color: #C0C0C0 !important;
+	background-color: white !important;
 }
