small changes, made url displayed equal to url stored

--- a/inject.css
+++ b/inject.css
@@ -17,6 +17,14 @@ h2{
     margin-right: -50%;
     transform: translate(-50%, -50%)
 }
+h3{
+    margin: 0;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
 body{
 	background-color: white !important;
 }
