--- a/inject.css
+++ b/inject.css
@@ -1,30 +1,21 @@
+body.b{
+    background-color: #D3D3D3 !important;
+    background-image: none !important;
+}
 h1{
-	font-size: 30px !important;	
-	text-shadow: 0px 0px 10px black !important;
-	color: white !important;
-	margin: 0;
+	font-size: 36px !important;	
+    top: 50%;
+
+}
+h2{
+    font-size: 26px !important;
+    padding-top: 30px;
+}
+#text{
+    margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
-}
-h2{
-	margin: 0;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
-}
-h3{
-    margin: 0;
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
-}
-body{
-	background-color: white !important;
 }
