improved block page appearance, small changes to onbeforerequest listener

--- a/inject.css
+++ b/inject.css
@@ -1,6 +1,16 @@
 html, body.b{
     background-color: #708090 !important;
     background-image: none !important;
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+
+   /*
+     Introduced in IE 10.
+     See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/
+   */
+   -ms-user-select: none;
+   user-select: none;
 }
 h1{
 	font-size: 36px !important;	
