--- a/inject.css
+++ b/inject.css
@@ -9,7 +9,7 @@ html, body.b{
 }
 h1{
 	font-size: 36px !important;	
-    top: 50%;
+  top: 50%;
 }
 h2{
     font-size: 26px !important;
@@ -21,7 +21,7 @@ h2{
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 #text h1, h2{
     font-weight: bold !important;
